--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-textarea {
-    resize: none;
+@layer base {
+    textarea {
+        resize: none;
+    }
 }
