--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,15 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @layer base {
-    html,
-    body,
-    #root {
-        font-family: 'Namum Pen Script', cursive;
+    * {
+        font-family: 'Noto Sans KR', sans-serif;
     }
     textarea {
         resize: none;
+    }
+}
+
+@layer utilities {
+    .grid {
+        background-position: center;
+        background-size: 20px 20px;
+        background-image: linear-gradient(to right, #eee 1px, transparent 1px), linear-gradient(to bottom, #eee 1px, transparent 1px);
     }
 }
