--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,18 @@
 
 @layer base {
     * {
+        font-size-adjust: none;
         font-family: 'Noto Sans KR', sans-serif;
+        font-size: 16px;
+        letter-spacing: normal;
+        line-height: normal;
+        font-weight: 400;
+    }
+    html,
+    body,
+    #root {
+        height: 100%;
+        width: 100%;
     }
     textarea {
         resize: none;
