--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,18 +16,10 @@
     html,
     body,
     #root {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
     }
     textarea {
         resize: none;
-    }
-}
-
-@layer utilities {
-    .grid {
-        background-position: center;
-        background-size: 20px 20px;
-        background-image: linear-gradient(to right, #eee 1px, transparent 1px), linear-gradient(to bottom, #eee 1px, transparent 1px);
     }
 }
